package com.logistics.ui;

/**
 * Abstract Product interface for checkbox UI components.
 */
public interface Checkbox {
    /**
     * Renders the checkbox UI component.
     */
    void paint();
}
